--- a/index.html
+++ b/index.html
@@ -74,5 +74,19 @@
         width=350" height="300">
       </a>
    </body>
+  
+     <body>
+      <a href="https://partner.swiggy.com/orders" target="_blank">
+        <img alt="Swiggy" src="images/swiggy.png"
+        width=350" height="300">
+      </a>
+   </body>
 
+   <body>
+      <a href="https://partner.swiggy.com/orders" target="_blank">
+        <img alt="PizzeriaMart Admin" src="images/pizzeria.png"
+        width=350" height="300">
+      </a>
+   </body>
+                              
 </html>
