--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
    </body>
 
    <body>
-      <a href="https://partner.swiggy.com/orders" target="_blank">
+      <a href="https://appat300.com/pizzeria/#!/page/login" target="_blank">
         <img alt="PizzeriaMart Admin" src="images/pizzeria.png"
         width=350" height="300">
       </a>
