--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
    <body>
       <a href="https://appat300.com/pizzeria/#!/page/login" target="_blank">
-        <img alt="PizzeriaMart Admin" src="images/pizzeria.png"
+        <img alt="PizzeriaMart Admin" src="images/pizzeria.jpg"
         width=350" height="300">
       </a>
    </body>
